@@ -226,10 +226,7 @@
       [{expressions,
         [{"0 */1 * * * * *",
           [{send_args,
-            ["/shell",
-             [{"cron_description", "\"$DESCRIPTION\""},
-              {"cron_datetime", "${DATETIME}"},
-              {"cron_datetime_next", "${DATETIME_NEXT}"}],
+            ["/shell", default,
              "echo \"Hello World! The time is \"`date`\".\"",
              undefined, undefined]},
            {send_args_info, true}]}]}]},
